--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@ margin-left: 0;
   
   
 }
+.text {
+    z-index:0;
 
+}
 .image-container {
   position: relative;
   display: flex;
@@ -134,10 +137,13 @@ a:visited {
     </nav>
 
 <div class="section" id="home">
+    <div style="color:gold;z-index:1;">Health information is on the left, place information is on the righ</div>
   <div class="image-container">
+    
     <div class="image" style="background-image: url('./Slide3.SVG')" img alt="Health information is on the left, place information is on the right"></div>
   </div>
 </div>
+<div class=text>Health information is on the left, place information is on the right</div>
 <div class="section">
   <div class="image-container">
     <div class="image" style="background-image: url('./Slide4.SVG')" img alt="Use group views, Health Metric Information, Advanced Displays, Place Information. Filters and Layers, Share your map"></div>
