--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@ margin-left: 0;
 .text {
     z-index:0;
   position:absolute;
-  top:150vw;
+  top:50vw;
+  font-size:5vw;
 
 }
 .image-container {
