--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@ margin-left: 0;
     z-index:0;
   position:absolute;
   top:50vw;
-  font-size:5vw;
+  font-size:4vw;
+  text-align:center;
 
 }
 .image-container {
