--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@ a:visited {
 <div class="section" id="home">
   <div class="image-container">
     <div class="image" style="background-image: url('./Slide3.SVG')" img alt="Health information is on the left, place information is on the right"></div>
-     <div class="text" style="color:gold;z-index:0;">Health information is on the left, place information is on the righ</div>
+     <div class="text" style="color: #ffc000;z-index:0;left:1vw;">Health information is on the left, place information is on the right</div>
   </div>
 </div>
 <div class="section">
