--- a/index.html
+++ b/index.html
@@ -37,7 +37,6 @@ margin-left: 0;
   height: 85%;
   position:relative;
   width: 99.9%;
-  top:2.5vw;
   background-color: white;
   background-size: contain;
   background-size: 100% 100%;
@@ -142,7 +141,7 @@ a:visited {
     </nav>
 
 <div class="section" id="home">
-  <div class="image-container">
+  <div class="image-container" style="top:2.5vw;">
     <div class="image" style="background-image: url('./Slide3.SVG')" img alt="Health information is on the left, place information is on the right"></div>
      <div class="text" style="color: #ffc000;z-index:0;left:1vw;">Health information is on the left, place information is on the right</div>
   </div>
