--- a/index.html
+++ b/index.html
@@ -149,6 +149,7 @@ a:visited {
 <div class="section">
   <div class="image-container">
     <div class="image" style="background-image: url('./Slide4.SVG')" img alt="Use group views, Health Metric Information, Advanced Displays, Place Information. Filters and Layers, Share your map"></div>
+     <div class="text" style="color: #ffc000;z-index:0;left:1vw;top:5vw;">Health information is on the left, place information is on the right</div>
   </div>
 </div>
 <div class="section">
