--- a/index.html
+++ b/index.html
@@ -154,7 +154,8 @@ a:visited {
 </div>
 <div class="section">
   <div class="image-container">
-    <div class="image" style="background-image: url('./Slide5.SVG')" img alt="View by topic(user group) or browse by topic"></div>
+    <div class="image" style="background-image: url('./Slide5.SVG')" img alt="View by topic(user group) or browse by all metrics"></div>
+     <div class="text" style="color: #ffc000;z-index:0;left:1vw;top80vw;">You can find group views, Health Metric Information, Advanced Displays on the left; Place Information, Filters and Layers, and Share your Map on the right</div>
   </div>
 </div>
 <div class="section">
