--- a/index.html
+++ b/index.html
@@ -155,12 +155,13 @@ a:visited {
 <div class="section">
   <div class="image-container">
     <div class="image" style="background-image: url('./Slide5.SVG')" img alt="View by topic(user group) or browse by all metrics"></div>
-     <div class="text" style="color: #ffc000;z-index:0;left:1vw;top80vw;">You can find group views, Health Metric Information, Advanced Displays on the left; Place Information, Filters and Layers, and Share your Map on the right</div>
+     <div class="text" style="color: #ffc000;z-index:0;left:1vw;top80vw;">View by topic(user group) or browse by all metrics</div>
   </div>
 </div>
 <div class="section">
   <div class="image-container">
     <div class="image" style="background-image: url('./Slide6.SVG')" img alt="Compare metrics & time periods"></div>
+     <div class="text" style="color: #ffc000;z-index:0;left:1vw;top1200vw;">Compare metrics & time periods</div>
   </div>
 </div>
 <div class="section">
