--- a/index.html
+++ b/index.html
@@ -161,22 +161,25 @@ a:visited {
 <div class="section">
   <div class="image-container">
     <div class="image" style="background-image: url('./Slide6.SVG')" img alt="Compare metrics & time periods"></div>
-     <div class="text" style="color: #ffc000;z-index:0;left:1vw;top1200vw;">Compare metrics & time periods</div>
+     <div class="text" style="color: #ffc000;z-index:0;left:1vw;top120vw;">Compare metrics & time periods</div>
   </div>
 </div>
 <div class="section">
   <div class="image-container">
     <div class="image" style="background-image: url('./Slide7.SVG')" img alt="Find a place"></div>
+      <div class="text" style="color: #ffc000;z-index:0;left:1vw;top160vw;">Find a place</div>
   </div>
 </div>
 <div class="section">
   <div class="image-container">
     <div class="image" style="background-image: url('./Slide8.SVG')" img alt="Find places with specific characteristics"></div>
+    <div class="text" style="color: #ffc000;z-index:0;left:1vw;top200vw;">Find places with specific characteristics</div>
   </div>
 </div>
 <div class="section">
   <div class="image-container">
     <div class="image" style="background-image: url('./Slide9.SVG')" img alt="Save & share what you see"></div>
+        <div class="text" style="color: #ffc000;z-index:0;left:1vw;top240vw;">Save & share what you see</div>
   </div>
 </div>
 <div class="section">
