--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@ margin-left: 0;
   background-position: center;
   background-repeat: no-repeat;
   border: 5px solid #0c5449;
+  margin-top:0;
 }
 
 
