--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@ a:visited {
             <div class="divider"></div>
             <button class="button"><li><a href="https://phoenix.wayne.edu/learning-lab">Learning Lab</a></li></button>
             <div class="divider"></div>
-            <button class="button"><li><a href="https://crcrjx5guewzuatspkobdg.on.drv.tw/vizpagejuly.html">Non-Animated Version</a></li></button>
+            <button class="button"><li><a href="https://jss37.github.io/ToolTip/#home">Animated Version</a></li></button>
           </ul>
     </nav>
 
@@ -185,6 +185,7 @@ a:visited {
 <div class="section">
   <div class="image-container">
     <div class="image" style="background-image: url('./Slide11.SVG')" img alt="Use-Case Video Example Videos"></div>
+     <div class="text" style="color: #ffc000;z-index:0;left:1vw;top280vw;">Use-Case Video Example Videos-Coming Soon</div>
   </div>
 </div>
 </div>
