--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@ a:hover,a:visited:hover {
   color: #0c5449;
 }
 a:visited {
-  color: #ffc000;
+  color: white;
   text-decoration: none;
 }
     @media only screen and (max-width: 1400px) {
